--- a/.github/disabled/build-docs.yaml
+++ b/.github/disabled/build-docs.yaml
@@ -37,39 +37,22 @@ jobs:
       #- name: "Configure Pages"
       #  uses: actions/configure-pages@v5
 
-      #- name: "Setup Python 3.13"
-      #  uses: actions/setup-python@v6
-      #  with:
-      #    python-version: "3.13"
-      #    cache: "pip"
+      - name: "Setup Python 3.13"
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+          cache: "pip"
 
-      #- name: "Install"
-      #  id: install
-      #  run: |
-      #    python -m pip install -U pip zensical
-
-      - name: "Install UV"
-        uses: astral-sh/setup-uv@v6
-
-      - name: "Install Python 3.13"
+      - name: "Install"
+        id: install
         run: |
-          uv python install 3.13
-
-      - name: "Install Zensical"
-        run: |
-          uv pip install zensical
-
-      - name: "Debug"
-        continue-on-error: true
-        run: |
-          which zensical
-          zensical --version
+          python -m pip install -U pip zensical
 
       - name: "Build"
         id: build
         run: |
-          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
           zensical build -c
+          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
 
       - name: "Upload Artifact"
         if: ${{ !inputs.pages }}
