astral-shit/uv debug

--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -70,6 +70,8 @@ jobs:
       - name: "Build"
         id: build
         run: |
+          echo "Debug 0"
+          uv add zensical
           echo "Debug 1"
           uv run zensical --version
           echo "Debug 2"
