--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -37,48 +37,23 @@ jobs:
       #- name: "Configure Pages"
       #  uses: actions/configure-pages@v5
 
-      #- name: "Setup Python 3.13"
-      #  uses: actions/setup-python@v6
-      #  with:
-      #    python-version: "3.13"
-      #    cache: "pip"
+      - name: "Setup Python 3.13"
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+          cache: "pip"
 
-      #- name: "Install"
-      #  id: install
-      #  run: |
-      #    python -m pip install -U pip zensical
-
-      - name: "Install UV"
-        uses: astral-sh/setup-uv@v6
-
-      - name: "Install Python 3.13"
+      - name: "Install"
+        id: install
         run: |
-          uv python install 3.13
-
-      #- name: "Install Zensical"
-      #  run: |
-      #    #uv pip install --system zensical
-      #    uv add zensical
-
-      #- name: "Debug 2"
-      #  continue-on-error: true
-      #  run: |
-      #    set +e
-      #    which zensical
-      #    uv run zensical --version
+          python -m pip install -U pip zensical
+          zensical --version
+          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
 
       - name: "Build"
         id: build
         run: |
-          echo "Debug 0"
-          uv add zensical
-          echo "Debug 1"
-          uv run zensical --version
-          echo "Debug 2"
-          echo "version=$(uv run zensical --version)" >> "$GITHUB_OUTPUT"
-          echo "Debug 3"
-          uv run zensical build -c
-          echo "Debug 4"
+          zensical build -c
 
       - name: "Upload Artifact"
         if: ${{ !inputs.pages }}
@@ -99,7 +74,7 @@ jobs:
         if: ${{ always() }}
         env:
           path: site
-          version: ${{ steps.build.outputs.version || 'unknown' }}
+          version: ${{ steps.install.outputs.version || 'unknown' }}
         run: |
           if [ "${{ steps.build.outcome }}" == "success" ];then
             markdown="🚀 Build Success\n\n"
