--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -47,12 +47,13 @@ jobs:
         id: install
         run: |
           python -m pip install -U pip zensical
+          zensical --version
+          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
 
       - name: "Build"
         id: build
         run: |
           zensical build -c
-          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
 
       - name: "Upload Artifact"
         if: ${{ !inputs.pages }}
@@ -73,7 +74,7 @@ jobs:
         if: ${{ always() }}
         env:
           path: site
-          version: ${{ steps.build.outputs.version || 'unknown' }}
+          version: ${{ steps.install.outputs.version || 'unknown' }}
         run: |
           if [ "${{ steps.build.outcome }}" == "success" ];then
             markdown="🚀 Build Success\n\n"
