Update Docs Usage

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -36,20 +36,20 @@ jobs:
         id: zensical
         uses: cssnr/zensical-action@master
 
-      - name: "Purge Cache"
-        if: ${{ env.purge-domain != '' }}
-        uses: cssnr/cloudflare-purge-cache-action@v2
-        with:
-          zones: ${{ env.purge-domain }}
-          token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      #- name: "Purge Cache"
+      #  if: ${{ env.purge-domain != '' }}
+      #  uses: cssnr/cloudflare-purge-cache-action@v2
+      #  with:
+      #    zones: ${{ env.purge-domain }}
+      #    token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
-      - name: "Algolia Crawler"
-        if: ${{ env.crawler-id != '' }}
-        uses: cssnr/algolia-crawler-action@v1
-        with:
-          crawler_id: ${{ env.crawler-id }}
-          crawler_user_id: ${{ secrets.CRAWLER_USER_ID }}
-          crawler_api_key: ${{ secrets.CRAWLER_API_KEY }}
+      #- name: "Algolia Crawler"
+      #  if: ${{ env.crawler-id != '' }}
+      #  uses: cssnr/algolia-crawler-action@v1
+      #  with:
+      #    crawler_id: ${{ env.crawler-id }}
+      #    crawler_user_id: ${{ secrets.CRAWLER_USER_ID }}
+      #    crawler_api_key: ${{ secrets.CRAWLER_API_KEY }}
 
       - name: "Send Notification"
         if: ${{ !cancelled() }}
