--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .idea/
 *.iml
 .vscode/
-**/venv/
-**/__pycache__/
-**/*.egg-info/
+.venv/
+venv/
+__pycache__/
+*.egg-info/
 dist/
-site/
-.cache/
 *.log
 *.pyc
 .coverage
 coverage.xml
+site/
+.cache/
 output.txt
