--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -120,15 +120,15 @@ jobs:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
 
-      - name: "Update Latest Tag"
-        if: ${{ !github.event.release.prerelease }}
-        uses: cssnr/update-version-tags-action@latest
-        continue-on-error: true
-        with:
-          major: false
-          minor: false
-          tags: latest
-          #tag: ${{ github.ref_name }}
+      #- name: "Update Latest Tag"
+      #  if: ${{ !github.event.release.prerelease }}
+      #  uses: cssnr/update-version-tags-action@latest
+      #  continue-on-error: true
+      #  with:
+      #    major: false
+      #    minor: false
+      #    tags: latest
+      #    #tag: ${{ github.ref_name }}
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
