--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -108,17 +108,18 @@ jobs:
           echo "github.event.release.prerelease: ${{ github.event.release.prerelease }}"
 
       - name: "Debug event.json"
-        if: ${{ !github.event.act }}
         continue-on-error: true
-        run: |
-          cat "${GITHUB_EVENT_PATH}"
+        run: cat "${GITHUB_EVENT_PATH}"
 
       - name: "Debug CTX github"
-        if: ${{ !github.event.act }}
         continue-on-error: true
         env:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
+
+      #- name: "Debug Environment"
+      #  continue-on-error: true
+      #  run: env
 
       #- name: "Update Latest Tag"
       #  if: ${{ !github.event.release.prerelease }}
