--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,8 +53,7 @@ jobs:
       #- name: "Debug Environment"
       #  if: ${{ !github.event.act }}
       #  continue-on-error: true
-      #  run: |
-      #    env
+      #  run: env
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
