--- a/zensical.toml
+++ b/zensical.toml
@@ -12,7 +12,7 @@ site_url = "https://actions-tools.cssnr.com/"
 
 # https://zensical.org/docs/setup/basics/#copyright
 copyright = """
-<a href="https://github.com/cssnr/actions-tools" target="_blank">Actions Tools Docs</a>
+<a href="https://github.com/cssnr/actions-tools" target="_blank">Actions Tools</a>
 <br>
 Built with <a href="https://github.com/zensical/zensical" target="_blank">Zensical</a>
 """
@@ -92,10 +92,10 @@ features = [
     "content.tooltips",
 
     # https://zensical.org/docs/setup/header/#automatic-hiding
-    # "header.autohide",
+    #"header.autohide",
 
     # https://zensical.org/docs/setup/navigation/#navigation-expansion
-    # "navigation.expand",
+    #"navigation.expand",
 
     # https://zensical.org/docs/setup/footer/#navigation
     "navigation.footer",
@@ -112,54 +112,33 @@ features = [
     # https://zensical.org/docs/setup/navigation/#progress-indicator
     #"navigation.instant.progress",
 
-    # When navigation paths are activated, a breadcrumb navigation is rendered
-    # above the title of each page
     # https://zensical.org/docs/setup/navigation/#navigation-path
     "navigation.path",
 
-    # When pruning is enabled, only the visible navigation items are included
-    # in the rendered HTML, reducing the size of the built site by 33% or more.
     # https://zensical.org/docs/setup/navigation/#navigation-pruning
     #"navigation.prune",
 
-    # When sections are enabled, top-level sections are rendered as groups in
-    # the sidebar for viewports above 1220px, but remain as-is on mobile.
     # https://zensical.org/docs/setup/navigation/#navigation-sections
     "navigation.sections",
 
-    # When tabs are enabled, top-level sections are rendered in a menu layer
-    # below the header for viewports above 1220px, but remain as-is on mobile.
     # https://zensical.org/docs/setup/navigation/#navigation-tabs
     #"navigation.tabs",
 
-    # When sticky tabs are enabled, navigation tabs will lock below the header
-    # and always remain visible when scrolling down.
     # https://zensical.org/docs/setup/navigation/#sticky-navigation-tabs
     #"navigation.tabs.sticky",
 
-    # A back-to-top button can be shown when the user, after scrolling down,
-    # starts to scroll up again.
     # https://zensical.org/docs/setup/navigation/#back-to-top-button
     "navigation.top",
 
-    # When anchor tracking is enabled, the URL in the address bar is
-    # automatically updated with the active anchor as highlighted in the table
-    # of contents.
     # https://zensical.org/docs/setup/navigation/#anchor-tracking
     "navigation.tracking",
 
-    # When search highlighting is enabled and a user clicks on a search result,
-    # Zensical will highlight all occurrences after following the link.
     # https://zensical.org/docs/setup/search/#search-highlighting
     "search.highlight",
 
-    # When anchor following for the table of contents is enabled, the sidebar
-    # is automatically scrolled so that the active anchor is always visible.
     # https://zensical.org/docs/setup/navigation/#anchor-following
-    # "toc.follow",
+    #"toc.follow",
 
-    # When navigation integration for the table of contents is enabled, it is
-    # always rendered as part of the navigation sidebar on the left.
     # https://zensical.org/docs/setup/navigation/#navigation-integration
     "toc.integrate",
 ]
@@ -183,7 +162,7 @@ toggle.name = "Switch to light mode"
 [[project.theme.palette]]
 media = "(prefers-color-scheme: light)"
 scheme = "default"
-primary  = "yellow"
+primary  = "amber"
 accent = "indigo"
 toggle.icon = "lucide/sun"
 toggle.name = "Switch to dark mode"
@@ -242,7 +221,7 @@ icon = "simple/githubactions"
 link = "https://actions.cssnr.com/"
 name = "Actions"
 [[project.extra.social]]
-icon = "fontawesome/solid/globe"
+icon = "fontawesome/solid/house-laptop"
 link = "https://cssnr.github.io/"
 name = "Website"
 [[project.extra.social]]
