--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,8 +41,7 @@ jobs:
       - name: "Debug event.json"
         if: ${{ !github.event.act }}
         continue-on-error: true
-        run: |
-          cat "${GITHUB_EVENT_PATH}"
+        run: cat "${GITHUB_EVENT_PATH}"
 
       - name: "Debug CTX github"
         if: ${{ !github.event.act }}
@@ -54,8 +53,7 @@ jobs:
       #- name: "Debug Environment"
       #  if: ${{ !github.event.act }}
       #  continue-on-error: true
-      #  run: |
-      #    env
+      #  run: env
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
