--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,17 +15,15 @@ on:
 jobs:
   build:
     name: "Build"
+    if: ${{ !contains(github.event.head_commit.message, '#notest') }}
     uses: ./.github/workflows/build.yaml
     with:
       name: test
-    #permissions:
-    #  contents: write
 
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     needs: [build]
-    if: ${{ !contains(github.event.head_commit.message, '#notest') }}
     strategy:
       fail-fast: false
       matrix:
@@ -50,10 +48,10 @@ jobs:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
 
-      #- name: "Debug Environment"
-      #  if: ${{ !github.event.act }}
-      #  continue-on-error: true
-      #  run: env
+      - name: "Debug Environment"
+        if: ${{ !github.event.act }}
+        continue-on-error: true
+        run: env
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
