Update Workflows and Docs

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: cssnr/zensical-action@master
         with:
           upload: "artifact"
+          prepare: 'sed -i "s/>Zensical<\/a>/>Zensical<\/a> v${ZENSICAL_VERSION}/" zensical.toml'
 
   deploy:
     name: "Deploy"
