--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,9 +41,9 @@ jobs:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
 
-      #- name: "Debug Environment"
-      #  continue-on-error: true
-      #  run: env
+      - name: "Debug Environment"
+        continue-on-error: true
+        run: env
 
       - name: "Debug"
         run: |
