--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: "Debug event.json"
         continue-on-error: true
@@ -32,9 +32,9 @@ jobs:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
 
-      #- name: "Debug Environment"
-      #  continue-on-error: true
-      #  run: env
+      - name: "Debug Environment"
+        continue-on-error: true
+        run: env
 
       - name: "Setup Python 3.13"
         uses: actions/setup-python@v6
