--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,11 +5,10 @@ on:
   push:
     branches: [master]
     paths-ignore:
+      - ".gitattributes"
       - ".gitignore"
       - ".prettierignore"
-      - "build.ps1"
       - "MANIFEST.in"
-      - "pyproject.toml"
   pull_request:
 
 concurrency:
@@ -32,59 +31,43 @@ jobs:
       - name: "Debug event.json"
         continue-on-error: true
         run: cat "${GITHUB_EVENT_PATH}"
-
       - name: "Debug CTX github"
         continue-on-error: true
         env:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
-
       - name: "Debug Environment"
         continue-on-error: true
         run: env
 
-      #- name: "Check Changed Files"
-      #  id: changed
-      #  uses: tj-actions/changed-files@v47
-      #  with:
-      #    files: |
-      #      src/**
-      #      tests/**
-      #      pyproject.toml
+      - name: "Install UV"
+        uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
 
-      - name: "Setup Python 3.13"
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-          cache: "pip"
-
-      - name: "Install"
-        id: install
+      - name: "Install Python"
         run: |
-          python -m pip install -U pip
-          python -m pip install --group dev
-          python -m pip install -e .
-          python -m pip list
+          uv python install
 
-      - name: "Debug"
+      - name: "Install Project"
+        run: |
+          uv sync --locked --all-extras --dev
+
+      - name: "Debug UV"
         continue-on-error: true
         run: |
-          python -V
-          which python
-          echo "::group::pip list"
-          python -m pip list
+          uv python dir
+          uv python find
+          uv run python -V
+          echo "::group::uv tree"
+          uv tree
           echo "::endgroup::"
-
-      - name: "astral-sh/ruff"
-        if: ${{ !cancelled() }}
-        uses: astral-sh/ruff-action@v3
-        with:
-          version: latest
+          echo "::group::uv pip list"
+          uv pip list
+          echo "::endgroup::"
 
       - name: "astral-sh/ty"
         if: ${{ !cancelled() }}
         run: |
-          ty check --python "$(which python)" -v
+          uv run ty check -v
 
       - name: "psf/black"
         if: ${{ !cancelled() }}
@@ -92,17 +75,27 @@ jobs:
 
       - name: "isort"
         if: ${{ !cancelled() }}
-        uses: isort/isort-action@v1
+        uses: isort/isort-action@24d8a7a51d33ca7f36c3f23598dafa33f7071326 # v1.1.1
 
       - name: "mypy"
         if: ${{ !cancelled() }}
         run: |
-          mypy src
+          uv run mypy src
 
       - name: "bandit"
         if: ${{ !cancelled() }}
         run: |
-          bandit -c pyproject.toml -r src
+          uv run bandit -c pyproject.toml -r src
+
+      - name: "validate-pyproject"
+        if: ${{ !cancelled() }}
+        run: |
+          uv run validate-pyproject pyproject.toml
+
+      - name: "tombi"
+        if: ${{ !cancelled() }}
+        run: |
+          uv run tombi lint
 
       - name: "prettier"
         if: ${{ !cancelled() }}
@@ -114,55 +107,28 @@ jobs:
 
       - name: "yamllint"
         if: ${{ !cancelled() }}
-        env:
-          CONFIG: "{extends: relaxed, ignore: [node_modules/], rules: {line-length: {max: 119}}}"
         run: |
           echo "::group::List Files"
-          yamllint -d '${{ env.CONFIG }}' --list-files .
+          yamllint -c .github/yamllint.yaml --list-files .
           echo "::endgroup::"
-          yamllint -d '${{ env.CONFIG }}' .
+          yamllint -c .github/yamllint.yaml .
 
       - name: "actionlint"
         if: ${{ !cancelled() }}
-        run: |
-          echo "::group::Download"
-          loc=$(curl -sI https://github.com/rhysd/actionlint/releases/latest | grep -i '^location:')
-          echo "loc: ${loc}"
-          tag=$(echo "${loc}" | sed -E 's|.*/tag/v?(.*)|\1|' | tr -d '\t\r\n')
-          echo "tag: ${tag}"
-          url="https://github.com/rhysd/actionlint/releases/latest/download/actionlint_${tag}_linux_amd64.tar.gz"
-          echo "url: ${url}"
-          curl -sL "${url}" | tar xz -C "${RUNNER_TEMP}" actionlint
-          file "${RUNNER_TEMP}/actionlint"
-          "${RUNNER_TEMP}/actionlint" --version
-          echo "::endgroup::"
-          "${RUNNER_TEMP}/actionlint" -color -verbose -shellcheck= -pyflakes=
+        uses: cssnr/actionlint-action@master
+        with:
+          shellcheck_opts: -e SC2012
 
       - name: "pytest"
         if: ${{ !cancelled() }}
         id: coverage
         run: |
-          coverage run -m pytest
-          coverage xml
-          coverage report -m
+          uv run coverage run -m pytest
+          uv run coverage xml
+          uv run coverage report -m
 
       - name: "codecov"
         if: ${{ !cancelled() && steps.coverage.outcome == 'success' }}
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-      #- name: "hadolint"
-      #  if: ${{ !cancelled() }}
-      #  uses: hadolint/hadolint-action@v3.3.0
-      #  with:
-      #    dockerfile: Dockerfile
-
-      #- name: "Vale"
-      #  if: ${{ !cancelled() }}
-      #  uses: errata-ai/vale-action@v2.1.1
-
-      #- name: "SonarQube"
-      #  uses: SonarSource/sonarqube-scan-action@v4
-      #  env:
-      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
